# Davivienda-Backend

./: .dockerignore  .env.example  .envrc  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  start.fish  start.sh
alembic/: env.py
alembic/versions/: 20251024_1017_92509da0a455_initial_database_schema_with_users_.py
src/: __init__.py  main.py
src/api/: dependencies.py
src/api/routes/: auth.py  tasks.py
src/core/: config.py  security.py
src/db/: base.py
src/middleware/: __init__.py  rate_limit.py  security_headers.py
src/models/: __init__.py  audit_log.py  task.py  user.py
src/repositories/: task_repository.py  user_repository.py
src/schemas/: __init__.py  task.py  token.py  user.py
src/services/: audit_service.py  auth_service.py  task_service.py
tests/: __init__.py  conftest.py  test_auth.py  test_security.py  test_tasks.py
